user_profile_modal: Fix long values flowing under the profile avatar.
When some value is very long as in the case of a long email address,
the text used to flow and hide under the profile avatar. We want the
values to be seen at all times, even if they need to be broken into
multiple lines.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -325,7 +325,12 @@ ul {
     }
 
     .col-left {
-        max-width: 60%;
+        padding: 0 10px 0 0;
+        word-break: break-all;
+    }
+
+    .col-right {
+        width: fit-content;
     }
 
     &.no-fields {
